--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>R</span>aihan <span>F</span>adhil <span>N</span>asrullah</h1>
+            <h1><span>A</span>nanda <span>M</span>aulanal</h1>
           </a>
         </div>
         <div class="nav-list">
@@ -42,7 +42,7 @@
       <div>
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
-        <h1>Raihan Fadhil Nasrullah<span></span></h1>
+        <h1>Ananda maulana<span></span></h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
       </div>
     </div>
@@ -171,7 +171,7 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End Developer</h2>
-        <p>Let me introduce myself, my name is Raihan Fadhil Nasrullah Address: Bambanglipuro, Bantul, Yogyakarta, Indonesia.My ambition is to become a billionaire.</p>
+        <p>Let me introduce myself, my name is Ananda Maulana Address: Bambanglipuro, Bantul, Yogyakarta, Indonesia.My ambition is to become a billionaire.</p>
         <a href="#" class="cta">Download Resume</a>
       </div>
     </div>
@@ -197,8 +197,8 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
-            <h2>zuyckzeroo@gmail.com</h2>
-            <h2>zuyckzuyck@gmail.com</h2>
+            <h2>Maulanjay@gmail.com</h2>
+            <h2>maulanjauyy@gmail.com</h2>
           </div>
         </div>
         <div class="contact-item">
@@ -217,7 +217,7 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>R</span>aihan <span>F</span>adhil <span>N</span>asrullah</h1>
+        <h1><span>A</span>nanda <span>M</span>aulana</h1>
       </div>
       <h2>Your Complete Web Solution</h2>
       <div class="social-icon">
@@ -228,7 +228,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
       </div>
-      <p>Copyright © 2024 Raihan Fadhil Nasrullah . All rights reserved</p>
+      <p>Copyright © 2024 Ananda Maulana. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
